Prevent file name on spot page from overlapping with uploaded picture in webkit browsers.  Still issue with file name alignment in chrome.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1019,7 +1019,9 @@ input[type='text']:focus {
       background-color: $acc-dark;
       border: 1px solid $comp1-dark;
       color: $text-light;
+      max-width: 250px;
     }
+
   }
 
 
